--- a/site/components/Sidenav/Sidenav.module.scss
+++ b/site/components/Sidenav/Sidenav.module.scss
@@ -41,17 +41,13 @@
 			}
 		}
 		&--active {
-			span {
-				color: var(--chakra-colors-brand-secondary-default);
-			  }
 			&::before {
-				background: var(--chakra-colors-brand-secondary-default);
+				background: var(--chakra-colors-brand-white-default);
 				transition: background ease-in-out 0.15s, color ease-in-out 0.15s;
 				transform: translateX(-50%);
 				border-radius: 100%;
 				position: absolute;
-				background: var(--chakra-colors-brand-secondary-hover);
-				bottom: -4px;
+				top: -4px;
 				height: 8px;
 				content: '';
 				width: 8px;
